// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth Multifactor Challenge Flow should handle Challenge Type and Authenticator ID as optional 1`] = `Object {}`;

exports[`auth Multifactor Challenge Flow should handle success 1`] = `
Object {
  "bindingMethod": "prompt",
  "challengeType": "oob",
  "oobCode": "oob-code",
}
`;

exports[`auth Multifactor Challenge Flow should handle success with optional parameters Challenge Type and Authenticator Id 1`] = `
Object {
  "bindingMethod": "prompt",
  "challengeType": "oob",
  "oobCode": "oob-code",
}
`;

exports[`auth Multifactor Challenge Flow should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth Multifactor Challenge Flow should require MFA Token 1`] = `
"Missing required parameters: [
  \\"mfa_token\\"
]"
`;

exports[`auth OOB flow binding code should be optional 1`] = `Object {}`;

exports[`auth OOB flow should handle malformed OOB code 1`] = `[invalid_grant: Malformed oob_code]`;

exports[`auth OOB flow should handle success with binding code 1`] = `
Object {
  "accessToken": "1234",
  "expiresIn": 86400,
  "idToken": "id-123",
  "scope": "openid profile email address phone",
  "tokenType": "Bearer",
}
`;

exports[`auth OOB flow should handle success without binding code 1`] = `
Object {
  "accessToken": "1234",
  "expiresIn": 86400,
  "idToken": "id-123",
  "scope": "openid profile email address phone",
  "tokenType": "Bearer",
}
`;

exports[`auth OOB flow should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth OOB flow should require MFA Token and OOB Code 1`] = `
"Missing required parameters: [
  \\"mfa_token\\",
  \\"oob_code\\"
]"
`;

exports[`auth OTP flow should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth OTP flow should require MFA Token and OTP 1`] = `
"Missing required parameters: [
  \\"mfa_token\\",
  \\"otp\\"
]"
`;

exports[`auth OTP flow when MFA is not associated 1`] = `[unsupported_challenge_type: User is not enrolled. You can use /mfa/associate endpoint to enroll the first authenticator.]`;

exports[`auth OTP flow when MFA succeeds 1`] = `
Object {
  "accessToken": "1234",
  "expiresIn": 86400,
  "idToken": "id-123",
  "scope": "openid profile email address phone",
  "tokenType": "Bearer",
}
`;

exports[`auth OTP flow when OTP Code is invalid 1`] = `[invalid_grant: Invalid otp_code.]`;

exports[`auth Recovery Code flow should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth Recovery Code flow should require MFA Token and Recovery Code 1`] = `
"Missing required parameters: [
  \\"mfa_token\\",
  \\"recovery_code\\"
]"
`;

exports[`auth Recovery Code flow when Recovery code succeeds 1`] = `
Object {
  "accessToken": "1234",
  "expiresIn": 86400,
  "idToken": "id-123",
  "scope": "openid profile email address phone",
  "tokenType": "Bearer",
}
`;

exports[`auth Recovery Code flow when user does not have Recovery Code 1`] = `[unsupported_challenge_type: User does not have a recovery-code.]`;

exports[`auth authorizeUrl should return default authorize url 1`] = `"https://samples.auth0.com/authorize?response_type=code&redirect_uri=https%3A%2F%2Fmysite.com%2Fcallback&state=a_random_state&client_id=A_CLIENT_ID_OF_YOUR_ACCOUNT&auth0Client=eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0%3D"`;

exports[`auth authorizeUrl should return default authorize url with extra parameters 1`] = `"https://samples.auth0.com/authorize?response_type=code&redirect_uri=https%3A%2F%2Fmysite.com%2Fcallback&state=a_random_state&connection=facebook&client_id=A_CLIENT_ID_OF_YOUR_ACCOUNT&auth0Client=eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0%3D"`;

exports[`auth change password should handle oauth error 1`] = `[invalid_request: Invalid grant]`;

exports[`auth change password should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth change password should return successful response 1`] = `Object {}`;

exports[`auth change password should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/dbconnections/change_password",
  Object {
    "body": "{\\"email\\":\\"info@auth0.com\\",\\"connection\\":\\"Username-Password-Authentication\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth code exchange for native social should handle oauth error 1`] = `[invalid_request: Invalid grant]`;

exports[`auth code exchange for native social should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth code exchange for native social should return successful response 1`] = `
Object {
  "accessToken": "an access token",
  "expiresIn": 1234567890,
  "idToken": "an id token",
  "scope": "openid",
  "state": "a random state for auth",
}
`;

exports[`auth code exchange for native social should return successful response with optional parameters 1`] = `
Object {
  "accessToken": "an access token",
  "expiresIn": 1234567890,
  "idToken": "an id token",
  "scope": "openid",
  "state": "a random state for auth",
}
`;

exports[`auth code exchange for native social should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"subject_token\\":\\"a subject token\\",\\"subject_token_type\\":\\"a subject token type\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"grant_type\\":\\"urn:ietf:params:oauth:grant-type:token-exchange\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth code exchange for native social should send correct payload with optional parameters 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"subject_token\\":\\"a subject token\\",\\"subject_token_type\\":\\"a subject token type\\",\\"user_profile\\":{\\"name\\":{\\"firstName\\":\\"John\\",\\"lastName\\":\\"Smith\\"}},\\"audience\\":\\"http://myapi.com\\",\\"scope\\":\\"openid\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"grant_type\\":\\"urn:ietf:params:oauth:grant-type:token-exchange\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth code exchange should handle oauth error 1`] = `[invalid_request: Invalid grant]`;

exports[`auth code exchange should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth code exchange should return successful response 1`] = `
Object {
  "accessToken": "an access token",
  "expiresIn": 1234567890,
  "idToken": "an id token",
  "scope": "openid",
  "state": "a random state for auth",
}
`;

exports[`auth code exchange should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"code\\":\\"a code\\",\\"code_verifier\\":\\"a verifier\\",\\"redirect_uri\\":\\"https://mysite.com/callback\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"grant_type\\":\\"authorization_code\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth constructor should fail without clientId 1`] = `"Missing clientId in parameters"`;

exports[`auth constructor should fail without domain 1`] = `"Missing Auth0 domain"`;

exports[`auth create user should handle auth0 error 1`] = `[BadRequestError: The user already exists.]`;

exports[`auth create user should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth create user should return successful response 1`] = `
Object {
  "email": "info@auth0.com",
  "emailVerified": false,
}
`;

exports[`auth create user should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/dbconnections/signup",
  Object {
    "body": "{\\"email\\":\\"info@auth0.com\\",\\"password\\":\\"secret\\",\\"connection\\":\\"aconnection\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth create user should send correct payload with metadata 1`] = `
Array [
  "https://samples.auth0.com/dbconnections/signup",
  Object {
    "body": "{\\"email\\":\\"info@auth0.com\\",\\"password\\":\\"secret\\",\\"connection\\":\\"aconnection\\",\\"user_metadata\\":{\\"customerId\\":12345},\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth create user should send correct payload with username 1`] = `
Array [
  "https://samples.auth0.com/dbconnections/signup",
  Object {
    "body": "{\\"email\\":\\"info@auth0.com\\",\\"password\\":\\"secret\\",\\"connection\\":\\"aconnection\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth logoutUrl should return default logout url 1`] = `"https://samples.auth0.com/v2/logout?auth0Client=eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0%3D"`;

exports[`auth logoutUrl should return logout url with extra parameters 1`] = `"https://samples.auth0.com/v2/logout?federated=true&client_id=CLIENT_ID&auth0Client=eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0%3D"`;

exports[`auth logoutUrl should return logout url with skipping unknown parameters 1`] = `"https://samples.auth0.com/v2/logout?federated=true&auth0Client=eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0%3D"`;

exports[`auth password realm should handle oauth error 1`] = `[invalid_request: Invalid grant]`;

exports[`auth password realm should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth password realm should return successful response 1`] = `
Object {
  "accessToken": "an access token",
  "expiresIn": 1234567890,
  "idToken": "an id token",
  "scope": "openid",
  "state": "a random state for auth",
}
`;

exports[`auth password realm should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"username\\":\\"info@auth0.com\\",\\"password\\":\\"secret pass\\",\\"realm\\":\\"Username-Password-Authentication\\",\\"audience\\":\\"http://myapi.com\\",\\"scope\\":\\"openid\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"grant_type\\":\\"http://auth0.com/oauth/grant-type/password-realm\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with SMS connection should begin with code 1`] = `
Array [
  "https://samples.auth0.com/passwordless/start",
  Object {
    "body": "{\\"phone_number\\":\\"+5491159991000\\",\\"send\\":\\"code\\",\\"connection\\":\\"sms\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with SMS connection should begin with link 1`] = `
Array [
  "https://samples.auth0.com/passwordless/start",
  Object {
    "body": "{\\"phone_number\\":\\"+5491159991000\\",\\"send\\":\\"link\\",\\"connection\\":\\"sms\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with SMS connection should begin with optional parameters 1`] = `
Array [
  "https://samples.auth0.com/passwordless/start",
  Object {
    "body": "{\\"phone_number\\":\\"+5491159991000\\",\\"send\\":\\"code\\",\\"authParams\\":{\\"scope\\":\\"openid profile\\"},\\"connection\\":\\"sms\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with SMS connection should continue 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"username\\":\\"+5491159991000\\",\\"otp\\":\\"123456\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"realm\\":\\"sms\\",\\"grant_type\\":\\"http://auth0.com/oauth/grant-type/passwordless/otp\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with SMS connection should continue with optional parameters 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"username\\":\\"+5491159991000\\",\\"otp\\":\\"123456\\",\\"audience\\":\\"http://myapi.com\\",\\"scope\\":\\"openid\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"realm\\":\\"sms\\",\\"grant_type\\":\\"http://auth0.com/oauth/grant-type/passwordless/otp\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with email connection should begin with code 1`] = `
Array [
  "https://samples.auth0.com/passwordless/start",
  Object {
    "body": "{\\"email\\":\\"info@auth0.com\\",\\"send\\":\\"link\\",\\"connection\\":\\"email\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with email connection should begin with link 1`] = `
Array [
  "https://samples.auth0.com/passwordless/start",
  Object {
    "body": "{\\"email\\":\\"info@auth0.com\\",\\"send\\":\\"link\\",\\"connection\\":\\"email\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with email connection should begin with optional parameters 1`] = `
Array [
  "https://samples.auth0.com/passwordless/start",
  Object {
    "body": "{\\"email\\":\\"info@auth0.com\\",\\"send\\":\\"code\\",\\"authParams\\":{\\"scope\\":\\"openid profile\\"},\\"connection\\":\\"email\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with email connection should continue 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"username\\":\\"info@auth0.com\\",\\"otp\\":\\"123456\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"realm\\":\\"email\\",\\"grant_type\\":\\"http://auth0.com/oauth/grant-type/passwordless/otp\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth passwordless flow with email connection should continue with optional parameters 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"username\\":\\"info@auth0.com\\",\\"otp\\":\\"123456\\",\\"audience\\":\\"http://myapi.com\\",\\"scope\\":\\"openid\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"realm\\":\\"email\\",\\"grant_type\\":\\"http://auth0.com/oauth/grant-type/passwordless/otp\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth refresh token should handle invalid token error 1`] = `[a0.response.invalid: invalid_token]`;

exports[`auth refresh token should handle oauth error 1`] = `[invalid_request: Invalid grant]`;

exports[`auth refresh token should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth refresh token should handle unknown error 1`] = `[a0.response.invalid: unknown error]`;

exports[`auth refresh token should return successful response 1`] = `
Object {
  "accessToken": "an access token",
  "expiresIn": 1234567890,
  "idToken": "an id token",
  "scope": "openid",
  "state": "a random state for auth",
}
`;

exports[`auth refresh token should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/oauth/token",
  Object {
    "body": "{\\"refresh_token\\":\\"a refresh token of a user\\",\\"scope\\":\\"openid\\",\\"customParam\\":\\"a custom value which should not be filtered out\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\",\\"grant_type\\":\\"refresh_token\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth revoke token should handle oauth error 1`] = `[invalid_request: Invalid grant]`;

exports[`auth revoke token should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth revoke token should return successful response 1`] = `Object {}`;

exports[`auth revoke token should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/oauth/revoke",
  Object {
    "body": "{\\"token\\":\\"a refresh token of a user\\",\\"client_id\\":\\"A_CLIENT_ID_OF_YOUR_ACCOUNT\\"}",
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Content-Type": "application/json",
    },
    "method": "POST",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;

exports[`auth user info should handle oauth error 1`] = `[invalid_request: Invalid grant]`;

exports[`auth user info should handle unexpected error 1`] = `[a0.response.invalid: Internal Server Error]`;

exports[`auth user info should return successful non-oidc response 1`] = `
Object {
  "sub": "auth0|1029837475",
}
`;

exports[`auth user info should return successful oidc response 1`] = `
Object {
  "email": "janedoe@example.com",
  "familyName": "Doe",
  "givenName": "Jane",
  "http://mysite.com/claims/customer": 192837465,
  "http://mysite.com/claims/status": "closed",
  "name": "Jane Doe",
  "picture": "http://example.com/janedoe/me.jpg",
  "preferredUsername": "j.doe",
  "sub": "248289761001",
  "updatedAt": 1497317424,
}
`;

exports[`auth user info should send correct payload 1`] = `
Array [
  "https://samples.auth0.com/userinfo",
  Object {
    "headers": Object {
      "Accept": "application/json",
      "Auth0-Client": "eyJuYW1lIjoicmVhY3QtbmF0aXZlLWF1dGgwIiwidmVyc2lvbiI6IjEuMC4wIn0=",
      "Authorization": "Bearer an access token of a user",
      "Content-Type": "application/json",
    },
    "method": "GET",
    "signal": AbortSignal {
      Symbol(kEvents): Map {
        "abort" => Object {
          "next": Listener {
            "callback": [Function],
            "capture": false,
            "isNodeStyleListener": false,
            "listener": [Function],
            "next": undefined,
            "once": false,
            "passive": false,
            "previous": [Circular],
            "removed": false,
            "weak": false,
          },
          "size": 1,
        },
      },
      Symbol(events.maxEventTargetListeners): 10,
      Symbol(events.maxEventTargetListenersWarned): false,
      Symbol(kAborted): false,
    },
  },
]
`;
